--- a/did-core/index.html
+++ b/did-core/index.html
@@ -13,9 +13,8 @@
     out in the same tree and use relative links so that they'll work offline.
    -->
 
-  <script class='remove' src='https://www.w3.org/Tools/respec/respec-w3c-common'>
-  </script>
-  <!--script src='./respec-w3c-common.js' class='remove'></script-->
+  <script class='remove' src='https://www.w3.org/Tools/respec/respec-w3c-common'></script>
+  <!-- <script src='./respec-w3c-common.js' class='remove'></script> -->
 
   <script class='remove' src="./common.js">
   </script>
@@ -184,7 +183,7 @@
     </p>
   </section>
 
-  <section id='sotd'>
+  <section hidden id='sotd'>
     This specification is under active development and implementers are advised
     against implementing the specification unless they are directly involved
     with the W3C DID Working Group. There are use cases [[?DID-USE-CASES]] in active
@@ -1700,9 +1699,9 @@ URL이 참조하고 있는 곳을 찾아서, 그 URL과 연관된 <code>publicKe
 </pre>
       </section>
 
-      <section>
+      <section id="proof">
         <h2>
-          Proof
+          증명 (Proof)
         </h2>
 
         <p>
@@ -1752,9 +1751,9 @@ URL이 참조하고 있는 곳을 찾아서, 그 URL과 연관된 <code>publicKe
 </pre>
       </section>
 
-      <section>
+      <section id="extensibility">
         <h2>
-          Extensibility
+          확장성 (Extensibility)
         </h2>
 
         <p>
