--- a/did-core/index.html
+++ b/did-core/index.html
@@ -152,7 +152,6 @@
     <p>
       이 문서에 오역 및 오타를 포함할 수 있습니다. <b>영어 원문만이 공식적이고 규범적인 효력을 가지고 있습니다.</b><br/>
       문의나 개선사항은 <a href="https://github.com/ssimeetupkorea/ssimeetupkorea.github.io">깃헙 링크</a>나 <a href="mailto:jshim10@illinois.edu">jshim10@illinois.edu</a>로 연락주시기 바랍니다.<br/>
-      * Issue는 현재 did-core에서 직접 등록된 문제들이기 때문에 번역하지 않았습니다.
     </p>
 
     <p>
@@ -2775,12 +2774,11 @@ DID 문서 변화 알림
     </section>
   </section>
 
-  <section class="appendix">
-    <h1>Current Issues</h1>
+  <section class="appendix" id="current-issues">
+    <h1>현재 이슈</h1>
 
     <p>
-      The list of issues below are under active discussion and are likely to
-      result in changes to this specification.
+      현재 활발하게 논의되고 있고 이 규격에 변화를 줄 수 있는 이슈사항들의 목록이다.
     </p>
 
     <div class="issue" data-number="85">Syntactially differentiate data about the DID versus application data</div>
@@ -2817,24 +2815,23 @@ DID 문서 변화 알림
     <div class="issue" data-number="45">Is method-specific-id supposed to be equivalent to param-char?</div>
   </section>
 
-  <section class="appendix">
+  <section class="appendix" id="registries">
     <h1>
-      Registries
+      레지스트리
     </h1>
 
     <p>
-      There are multiple registries that define <a>DID methods</a> and extensions to
-      this specification. These registries are:
+      이 규격을 바탕으로 <a>DID 메소드</a>를 정의하는 다수의 레지스트리들이 있다. 그 목록은 다음과 같다:
     </p>
 
     <table class="simple">
       <thead>
         <tr>
           <th>
-            Registry
+            레지스트리
           </th>
           <th>
-            Purpose
+            목적
           </th>
         </tr>
       </thead>
@@ -2843,11 +2840,10 @@ DID 문서 변화 알림
         <tr>
           <td>
             <a href="https://w3c-ccg.github.io/did-method-registry/">DID
-              Method Registry</a>
+              메소드 레지스트리</a>
           </td>
           <td>
-            Lists all known <a>DID methods</a> and contains links to their
-            specifications.
+            모든 <a>DID 메소드</a>들과 그들의 상세 규격에 대한 목록
           </td>
         </tr>
 
@@ -2857,21 +2853,20 @@ DID 문서 변화 알림
               Cryptography Suite Registry</a>
           </td>
           <td>
-            Defines all known Linked Data Cryptography Suites and Key
-            Formats.
+            알려진 모든 Linked Data Cryptography Suites와 Key Format을 정의
           </td>
         </tr>
       </tbody>
     </table>
   </section>
 
-  <section class="appendix">
+  <section class="appendix" id="real-world-example">
     <h1>
-      Real World Example
+      실사용 예제
     </h1>
 
     <p>
-      A future-facing real-world context is provided below:
+      미래지향적 실사용 예제는 다음과 같다:
     </p>
 
     <pre class="example nohighlight" title="Advanced DID document example">
