--- a/did-core/index.html
+++ b/did-core/index.html
@@ -1045,7 +1045,7 @@ did:example:123456#oidc
 
       <p class="note" title="The JSON-LD Context">
         <a href="https://www.w3.org/TR/json-ld/#the-context">JSON-LD Context</a>에 대한 
-        자세한 정보는 [[!JSON-LD]] 사양에서 확인할 수 있다.
+        자세한 정보는 [[JSON-LD]] 사양에서 확인할 수 있다.
       </p>
 
       <dl>
@@ -2942,6 +2942,7 @@ DID 문서 변화 알림
 }
 </pre>
   </section>
+  <section id="conformance"></section>
 
 </body>
 
