--- a/did-core/index.html
+++ b/did-core/index.html
@@ -160,7 +160,7 @@
     <dt><span style="font-weight: 500;">번역자 (가나다순)</span>: </dt>
     <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a></dd>
     <dd><a href="mailto:anh1026@kaist.ac.kr" ]>안형철</a></dd>
-    <dd><a href="mailto:example@gmail.com" ]>오효근</a></dd>
+    <dd><a href="mailto:benjioh5@gmail.com" ]>오효근</a> (<a href="https://www.scvsoft.net/">SCVSoft Co., Ltd.</a>)</dd>
     <dd><a href="https://www.linkedin.com/in/minho-yoo-1b968837/" ]>유민호</a> (<a href="https://iotrust.kr/">IoTrust Co., Ltd.</a>)</dd>
     <dd><a href="mailto:example@gmail.com" ]>유수웅</a></dd>
     <dd><a href="mailto:example@gmail.com" ]>윤희태</a> (<a href="https://http://blockcrafters.com/">Block Crafters Co., Ltd.</a>)</dd>
