fix grammer, ahh

--- a/did-core/index.html
+++ b/did-core/index.html
@@ -2656,7 +2656,7 @@ DID 문서 변화 알림
 
       <p>
         <code>equivID</code>와 같은 동치관계 속성을 도입하여, <a>DIDs</a>의 배열을 값으로 갖는 
-        <a>DID 도큐멘트</a> 안에서의 주체들이 두개 혹은 더 많은 <a>DiDs</a>이 동일한 주체를 
+        <a>DID 도큐멘트</a> 안에서의 주체들이 두개 혹은 더 많은 <a>DIDs</a>이 동일한 주체를 
         가리킨다는 것을 주장할 수 있다. 이 능력은 <a>DID 저장소</a> 간 이전을 지원하거나, 
         미래의 <a>DID 저장소</a>에 기존의 <a>DIDs</a>를 전달하는 등의 다양한 용도를 갖고 있다.
         이론적으로 동등한 <a>DIDs</a>는 동등한 <a>DIDs</a>에게 적용할 수 있는 한 <a>DID</a>에서 만들어진
@@ -2676,7 +2676,7 @@ DID 문서 변화 알림
       <p>
         증명가능한 타임스탬프는 식별자 레코드에서 명백한 용도를 갖고 있다. <a>DLTs</a>에게 잘 어울리는데, 
         <a>DLTs</a>는 일종의 타임스탬프 메커니즘을 제공하기 때문이다. 트랜젝션 비용에 비해, <a>DLTs</a>는
-        이 세상에서 가장 검열 저항적인 트랜젝션 정렬 시스템이기에 <a>DID 도큐멘트</a>의 타임스탬프 저장에 진짜 이상적이다.
+        이 세상에서 가장 검열 저항적인 트랜젝션 정렬 시스템이기에 <a>DID 도큐멘트</a>의 타임스탬프 저장에 거의 이상적이다.
         일부 상황에서 <a>DLT</a>은 근사적인 시간 관념을 쓰지만, <a href="https://github.com/bitcoin/bips/blob/master/bip-0113.mediawiki%23Abstract">
         "평균 시간 지연" (비트코인 BIP 113을 보라)</a>으로 명료하게 정의될 수 있다. 범용적인 <a>DID 문서</a>의 
         타임스탬프 매터니즘은 모든 <a>DLTs</a>에 적용될 수 있고, 트랜젠션들이나 트랜젝션의 배치들을 통한 매커니즘을 통해 
@@ -2692,7 +2692,7 @@ DID 문서 변화 알림
 
       <p>
         <a href="#key-revocation-and-recovery"></a> 세션에서 키의 훼손 이후 <a>DID</a>의 
-        제어 복구에 대한 타임 락에 대한 영리한 실제 사용 가능한 방법을 이야기헀다. 이 기법은 
+        제어 복구에 대한 타임 락에 대한 영리한 실제 사용 가능한 방법을 이야기했다. 이 기법은 
         공격자를 무력화하기 위해 이전 버전의 <a>DID 문서</a>에 적용된 인가로 제일 최신의 <a>DID 문서</a> 업데이트를 
         덮어 씌우는 것에 의존한다. 이러한 방어 기법은 트랜젝션 체인을 보호하기 위해 <a
         href="https://github.com/bitcoin/bips/blob/master/bip-0065.mediawiki%23Abstract">
