--- a/did-core/index.html
+++ b/did-core/index.html
@@ -12,6 +12,7 @@
     For the three scripts below, if your spec resides on dev.w3 you can check them
     out in the same tree and use relative links so that they'll work offline.
    -->
+	<meta property="og:description" content="탈중앙 식별자 DID 1.0 한글 번역" /> <!-- description shown in the actual shared post -->
 
   <script class='remove' src='https://www.w3.org/Tools/respec/respec-w3c-common'></script>
   <!-- <script src='./respec-w3c-common.js' class='remove'></script> -->
