--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -67,7 +67,7 @@ DID 문서는 DID 대상에 대한 다른 <a href="https://en.wikipedia.org/wiki
 이 문서들은 그래프 기반 데이터 구조이며 주로 [[JSON-LD]] 형식으로 작성되어 있지만, 다른 그래프 기반 데이터 포맷으로도 나타낼 수 있다.
   </dd>
 
-  <dt><dfn data-lt="DID fragment|DID fragments">DID 프래그먼트</dfn> (DID fragment)</dt>
+  <dt><dfn data-lt="DID fragment|DID fragments|DID 파편화">DID 프래그먼트</dfn> (DID fragment)</dt>
 
   <dd>
 <a>DID URL</a>중 첫 번째 해시 기호 문자 (<code>#</code>) 다음에 오는 부분이다. DID 조각 구문은 URI 조각 구문과 동일하다.
