--- a/did-core/index.html
+++ b/did-core/index.html
@@ -178,10 +178,11 @@
     <dd><a href="mailto:benjioh5@gmail.com" ]>오효근</a> (<a href="https://www.scvsoft.net/">SCVSoft Co., Ltd.</a>)</dd>
     <dd><a href="https://www.linkedin.com/in/minho-yoo-1b968837/" ]>유민호</a> (<a href="https://iotrust.kr/">IoTrust Co.,
         Ltd.</a>)</dd>
-    <dd><a href="mailto:example@gmail.com" ]>유수웅</a></dd>
-    <dd><a href="mailto:example@gmail.com" ]>윤희태</a> (<a href="https://http://blockcrafters.com/">Block Crafters Co.,
+    <dd><a href="mailto:magnified02@gmail.com" ]>유수웅</a></dd>
+    <dd><a href="mailto:projector301@gmail.com" ]>윤희태</a> (<a href="https://http://blockcrafters.com/">Block Crafters
+        Co.,
         Ltd.</a>)</dd>
-    <dd><a href="mailto:example@gmail.com" ]>임도형</a></dd>
+    <dd><a href="mailto:daoauth@gmail.com" ]>임도형</a></dd>
     <dd><a href="mailto:hyunsy822@gmail.com" ]>현수영</a></dd>
   </div>
   <section id='abstract'>
