--- a/did-core/index.html
+++ b/did-core/index.html
@@ -172,8 +172,12 @@
       최초번역일: 2019-12-29<br />
       최종수정일: 2020-01-10<br />
     </p>
-    <dt><span style="font-weight: 500;">번역자 (가나다순)</span>: </dt>
+    <dt>
+      <span style="font-weight: 500;">편집자 (가나다순)</span>: 
+    </dt>
     <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a></dd>
+    <br/>
+    <dt><span style="font-weight: 500;">번역자 (가나다순)</span>: </dt>
     <dd><a href="mailto:anh1026@kaist.ac.kr" ]>안형철</a></dd>
     <dd><a href="mailto:benjioh5@gmail.com" ]>오효근</a> (<a href="https://www.scvsoft.net/">SCVSoft Co., Ltd.</a>)</dd>
     <dd><a href="https://www.linkedin.com/in/minho-yoo-1b968837/" ]>유민호</a> (<a href="https://iotrust.kr/">IoTrust Co.,
