--- a/index.html
+++ b/index.html
@@ -166,31 +166,13 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="image-container">
-                                        <img class="img-responsive" style="height: 31px;" src="images/logo-big-dark.png"
+                                        <img class="img-responsive" style="height: 31px;" src="images/sponsor-logo-nipa.jpg"
                                             alt="alternative">
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="image-container">
-                                        <img class="img-responsive" style="height: 31px;" src="images/logo-big-dark.png"
-                                            alt="alternative">
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="image-container">
-                                        <img class="img-responsive" style="height: 31px;" src="images/logo-big-dark.png"
-                                            alt="alternative">
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="image-container">
-                                        <img class="img-responsive" style="height: 31px;" src="images/logo-big-dark.png"
-                                            alt="alternative">
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="image-container">
-                                        <img class="img-responsive" style="height: 31px;" src="images/logo-big-dark.png"
+                                        <img class="img-responsive" style="height: 31px;" src="images/sponsor-logo-etri.jpg"
                                             alt="alternative">
                                     </div>
                                 </div>
