Changed .jpg to png

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="image-container">
-                                        <img class="img-responsive" style="height: 31px;" src="images/sponsor-logo-nipa.jpg"
+                                        <img class="img-responsive" style="height: 31px;" src="images/sponsor-logo-nipa.png"
                                             alt="alternative">
                                     </div>
                                 </div>
