--- a/did-core/index.html
+++ b/did-core/index.html
@@ -175,7 +175,7 @@
     <dt>
       <span style="font-weight: 500;">편집자 (가나다순)</span>: 
     </dt>
-    <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a></dd>
+    <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a> (<a href="https://www.infrablockchain.com/">Blockchain Labs, Inc.</a>)</dd>
     <br/>
     <dt><span style="font-weight: 500;">번역자 (가나다순)</span>: </dt>
     <dd><a href="mailto:anh1026@kaist.ac.kr" ]>안형철</a></dd>
