--- a/did-core/index.html
+++ b/did-core/index.html
@@ -175,7 +175,7 @@
     <dt>
       <span style="font-weight: 500;">편집자 (가나다순)</span>: 
     </dt>
-    <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a> (<a href="https://www.infrablockchain.com/">Blockchain Labs, Inc.</a>)</dd>
+    <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a> (<a href="https://www.hopae.io/">Hopae Inc.</a>)</dd>
     <br/>
     <dt><span style="font-weight: 500;">번역자 (가나다순)</span>: </dt>
     <dd><a href="mailto:anh1026@kaist.ac.kr" ]>안형철</a></dd>
@@ -183,11 +183,9 @@
     <dd><a href="https://www.linkedin.com/in/minho-yoo-1b968837/" ]>유민호</a> (<a href="https://iotrust.kr/">IoTrust Co.,
         Ltd.</a>)</dd>
     <dd><a href="mailto:magnified02@gmail.com" ]>유수웅</a></dd>
-    <dd><a href="mailto:projector301@gmail.com" ]>윤희태</a> (<a href="https://http://blockcrafters.com/">Block Crafters
-        Co.,
-        Ltd.</a>)</dd>
-    <dd><a href="mailto:daoauth@gmail.com" ]>임도형</a></dd>
-    <dd><a href="mailto:hyunsy822@gmail.com" ]>현수영</a></dd>
+    <dd><a href="mailto:projector301@gmail.com" ]>윤희태</a> (<a href="https://www.hopae.io">Hopae Inc.</a>)</dd>
+    <dd><a href="mailto:daoauth@gmail.com" ]>임도형</a> (<a href="https://www.dsrvlabs.com/">DSRV Labs</a>)</dd>
+    <dd><a href="mailto:hyunsy822@gmail.com" ]>현수영</a> (<a href="https://www.dsrvlabs.com/">DSRV Labs</a>)</dd>
   </div>
   <section id='abstract'>
     <p>
